# project-chat-upholstery

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
alembic/: env.py
app/application/agent/: scheduling_agent_builder.py
app/application/agent/edges/orchestrator/: __init__.py  orchestrator_edges.py
app/application/agent/loaders/: edge_loader.py  node_loader.py
app/application/agent/node/orchestrator/: __init__.py  orchestrator_node.py  orchestrator_prompt.py
app/application/agent/registry/: edge_registry.py  node_registry.py
app/application/agent/state/: sheduling_agent_state.py
app/application/services/: scheduling_service.py
app/domain/: exception_handlers.py  memory_models.py  scheduling_data.py
app/infrastructure/config/: config.py
app/infrastructure/database/: database_session.py
app/infrastructure/interfaces/: illm_service.py
app/infrastructure/pesistence/: postgres_persistence.py
app/infrastructure/services/llm/: llm_factory.py  openai_service.py
app/presentation/: scheduling_routers.py
app/presentation/dto/: message_request_payload.py
app/utils/: get_last_message.py
